--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "name": "final-project",
     "version": "0.1.0",
-    "main": "index.js",
-    "homepage": "https://cicifagaras.github.io/online-store/",
+    "homepage": "https://cicifagaras.github.io/final-project/",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.9.0",
