--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "final-project",
     "version": "0.1.0",
-    "homepage": "https://cicifagaras.github.io/final-project/",
+    "homepage": "https://cicifagaras.github.io/final-project",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.9.0",
@@ -30,6 +30,7 @@
         "semantic-ui-react": "^2.1.3"
     },
     "scripts": {
+        "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
